[project]
name = "crowdflow-agent"
version = "0.1.0"
description = "A crowd flow analysis agent that uses computer vision, YOLOv3 detection, and custom ML models to predict crowd density patterns and generate flow predictions."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.2.2,<3.0.0",
    "google-adk>=1.8.0,<2.0.0",
    "google-cloud-aiplatform[adk,agent_engine,agent-engines]>=1.100.0",
    "python-dotenv>=1.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false 