[project]
name = "drishti-supervisor"
version = "0.1.0"
description = "Drishti Supervisor Agent - Orchestrates and coordinates multiple specialized sub-agents for comprehensive event management including infrastructure, medical assistance, queue management, and security."
authors = [
    {name = "Drishti Team", email = "team@drishti.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.2.2,<3.0.0",
    "google-adk>=1.8.0,<2.0.0",
    "google-cloud-aiplatform[adk,agent_engine,agent-engines]>=1.100.0",
    "python-dotenv>=1.0.0"
]

[tool.package]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
deploy-local = "deployment.local:main"
deploy-remote = "deployment.remote:main"
cleanup = "deployment.cleanup:cleanup_deployment"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
